--- a/src/app/server/java/BUILD.gn
+++ b/src/app/server/java/BUILD.gn
@@ -17,20 +17,27 @@ import("//build_overrides/chip.gni")
 
 import("${build_root}/config/android_abi.gni")
 import("${chip_root}/build/chip/java/rules.gni")
+import("${chip_root}/src/app/common_flags.gni")
+import("${chip_root}/src/lib/lib.gni")
 
 shared_library("jni") {
   output_name = "libCHIPAppServer"
 
   sources = [
     "CHIPAppServer-JNI.cpp",
+    "AppMain.cpp",
+    "AppMain.h",
   ]
 
   deps = [
-    "${chip_root}/src/controller/data_model",
-    "${chip_root}/src/inet",
-    "${chip_root}/src/lib",
     "${chip_root}/src/platform",
     "${chip_root}/src/platform/android",
+    "${chip_root}/src/lib",
+    "${chip_root}/src/app/server",
+    "${chip_root}/examples/tv-app/tv-common",
+    "${chip_root}/third_party/inipp",
+    "${chip_root}/examples/tv-app/android:android-tv-app",
+   # "${chip_root}/src/controller/java:jni",
   ]
 
   public_configs = [ "${chip_root}/src:includes" ]
