--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Project CHIP Authors
+# Copyright (c) 2021 Project CHIP Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,9 +17,8 @@ import("//build_overrides/chip.gni")
 
 import("${chip_root}/build/chip/tools.gni")
 
-
+# Todo: copy from examples/tv-app/linux but later will be moved to jni and upto java workd
 source_set("android-tv-app") {
-
   sources = [
     "${chip_root}/examples/tv-app/tv-common/include/CHIPProjectAppConfig.h",
     "include/account-login/AccountLoginManager.cpp",
@@ -60,14 +59,4 @@ source_set("android-tv-app") {
   ]
 
   cflags = [ "-Wconversion" ]
-
-
-
-
-
-
 }
-
-
-
-
