--- a/src/android/CHIPTVServer/app/src/main/AndroidManifest.xml
+++ b/src/android/CHIPTVServer/app/src/main/AndroidManifest.xml
@@ -13,14 +13,13 @@
 
     <application
         android:allowBackup="true"
+        android:extractNativeLibs="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CHIPTVSlave">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
