--- a/src/android/CHIPTVServer/gradle.properties
+++ b/src/android/CHIPTVServer/gradle.properties
@@ -19,9 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Build SDK from source code and debug in Android Stduio. Must also set matterBuildSrcDir.
-# Using 2 flags to be unified with CHIPTest
 matterSdkSourceBuild=false
-# Point to the SDK build dir without quotes (../../../../out/android_arm64 for
+# Point to the SDK build dir without quotes (out/android-arm64-chip-test for
 # example) to build SDK from source code and debug in Android Studio.
 # Set to blank to use the SDK prebuilt by scripts/build/build_examples.py.
-matterBuildSrcDir=../../../../out/android_arm64
+matterBuildSrcDir=out/android-arm64-chip-tvserver
+
