--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -34,8 +34,6 @@ shared_library("jni") {
     "include/audio-output/AudioOutputManager.h",
     "include/cluster-change-attribute.cpp",
     "include/cluster-init.cpp",
-    "include/content-launcher/ContentLauncherManager.cpp",
-    "include/content-launcher/ContentLauncherManager.h",
     "include/endpoint-configuration/EndpointConfigurationStorage.cpp",
     "include/endpoint-configuration/EndpointConfigurationStorage.h",
     "include/low-power/LowPowerManager.cpp",
@@ -46,6 +44,8 @@ shared_library("jni") {
     "include/target-navigator/TargetNavigatorManager.h",
     "include/tv-channel/TvChannelManager.cpp",
     "include/tv-channel/TvChannelManager.h",
+    "java/ContentLauncherManager.h",
+    "java/ContentLauncherManager.cpp",
     "java/KeypadInputManager.cpp",
     "java/KeypadInputManager.h",
     "java/WakeOnLanManager.cpp",
@@ -83,6 +83,11 @@ android_library("java") {
   ]
 
   sources = [
+    "java/src/com/tcl/chip/tvapp/ContentLaunchBrandingInformation.java",
+    "java/src/com/tcl/chip/tvapp/ContentLaunchManager.java",
+    "java/src/com/tcl/chip/tvapp/ContentLaunchManagerStub.java",
+    "java/src/com/tcl/chip/tvapp/ContentLaunchResponse.java",
+    "java/src/com/tcl/chip/tvapp/ContentLaunchSearchParameter.java",
     "java/src/com/tcl/chip/tvapp/KeypadInputManager.java",
     "java/src/com/tcl/chip/tvapp/KeypadInputManagerStub.java",
     "java/src/com/tcl/chip/tvapp/MediaInputInfo.java",
