--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -36,8 +36,6 @@ shared_library("jni") {
     "include/cluster-init.cpp",
     "include/endpoint-configuration/EndpointConfigurationStorage.cpp",
     "include/endpoint-configuration/EndpointConfigurationStorage.h",
-    "include/low-power/LowPowerManager.cpp",
-    "include/low-power/LowPowerManager.h",
     "include/media-playback/MediaPlaybackManager.cpp",
     "include/media-playback/MediaPlaybackManager.h",
     "include/target-navigator/TargetNavigatorManager.cpp",
@@ -53,6 +51,8 @@ shared_library("jni") {
     "java/MediaInputManager.cpp",
     "java/MediaInputManager.h",
     "java/TVApp-JNI.cpp",
+    "java/LowPowerManager.cpp",
+    "java/LowPowerManager.h",
   ]
 
   deps = [
@@ -96,6 +96,8 @@ android_library("java") {
     "java/src/com/tcl/chip/tvapp/WakeOnLanManager.java",
     "java/src/com/tcl/chip/tvapp/WakeOnLanManagerStub.java",
     "java/src/com/tcl/chip/tvapp/TvApp.java",
+    "java/src/com/tcl/chip/tvapp/LowPowerManager.java",
+    "java/src/com/tcl/chip/tvapp/LowPowerManagerStub.java",
   ]
 
   javac_flags = [ "-Xlint:deprecation" ]
